--- a/src/_sidebar.scss
+++ b/src/_sidebar.scss
@@ -1,15 +1,11 @@
-.has-sidebar {
+body {
     padding-left: 250px;
-
-    .sidebar {
-        left: 0;
-    }
 }
 
 .sidebar {
     position: fixed;
     top: 0;
-    left: -100%;
+    left: 0;
     width: 250px;
     height: 100%;
     background: $nav-sidebar-bg-color;
