Changed the way sidebar is built

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -99,6 +99,7 @@ $nav-tabs-active-link-hover-font-weight:    500 !default;
 //
 //##
 
+$user-height:                   50px;
 $user-bg:                       rgba(0, 0, 0, .4) !default;
 $user-color:                    $gray-light !default;
 $user-font-weight:              300 !default;
