--- a/src/_sidebar.scss
+++ b/src/_sidebar.scss
@@ -1,14 +1,17 @@
-body {
-    padding-left: 250px;
+.sidebar {
+    @extend .col-sm-3;
+    @extend .col-lg-2;
+    background: $nav-sidebar-bg-color;
+    padding: 0 0 $user-height;
 }
 
-.sidebar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 250px;
-    height: 100%;
-    background: $nav-sidebar-bg-color;
+@media (min-width: 768px) {
+    .sidebar {
+        position: fixed;
+        top: 0;
+        left: 0;
+        bottom: 0;
+    }
 }
 
 .sidebar-brand {
@@ -17,7 +20,7 @@ body {
     border-bottom: 1px solid $nav-sidebar-link-border-bottom-color;
 }
 
-.sidebar-nav {
+.sidebar .nav {
     > li {
         border-top: 1px solid $nav-sidebar-link-border-top-color;
         border-bottom: 1px solid $nav-sidebar-link-border-bottom-color;
