--- a/src/_user.scss
+++ b/src/_user.scss
@@ -2,8 +2,8 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 50px;
-    line-height: 50px;
+    height: $user-height;
+    line-height: $user-height;
     background-color: $user-bg;
     border-top: 1px solid $user-border-color;
     color: $user-color;
@@ -12,6 +12,9 @@
 
 .user-info {
     margin: 0 65px 0 15px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 
     img {
         width: 30px;
@@ -24,7 +27,7 @@
     position: absolute;
     top: 0;
     right: 0;
-    width: 50px;
+    width: $user-height;
     height: 100%;
     border-left: 1px solid $user-border-color;
     text-align: center;
