--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -67,6 +67,7 @@ $nav-link-hover-bg:                         transparent !default;
 $nav-link-hover-color:                      inherit !default;
 
 //== Sidebar
+$nav-sidebar-logo:                          url('../demo/assets/logo-demo.png') !default;
 $nav-sidebar-bg-color:                      $gray-darker !default;
 $nav-sidebar-border-color:                  #000 !default;
 
