--- a/src/_grid.scss
+++ b/src/_grid.scss
@@ -4,4 +4,12 @@
     @extend .col-lg-10;
     @extend .col-lg-offset-2;
     padding: 0;
+    float: none;
+}
+
+@media (min-width: $screen-sm) and (max-width: $screen-lg) {
+    .main-container {
+        margin-left: $nav-sidebar-collapsed-width;
+        width: auto;
+    }
 }
