--- a/src/_sidebar.scss
+++ b/src/_sidebar.scss
@@ -3,15 +3,7 @@
     @extend .col-lg-2;
     background: $nav-sidebar-bg-color;
     padding: 0 0 $user-height;
-}
-
-@media (min-width: 768px) {
-    .sidebar {
-        position: fixed;
-        top: 0;
-        left: 0;
-        bottom: 0;
-    }
+    z-index: 9999;
 }
 
 .sidebar-brand {
@@ -22,7 +14,7 @@
     border-bottom: 1px solid $nav-sidebar-link-border-bottom-color;
 }
 
-.sidebar .nav {
+.sidebar > .nav {
     > li {
         border-top: 1px solid $nav-sidebar-link-border-top-color;
         border-bottom: 1px solid $nav-sidebar-link-border-bottom-color;
@@ -30,6 +22,8 @@
         > a {
             border-left: 3px solid transparent;
             color: $nav-sidebar-link-color;
+            white-space: nowrap;
+            overflow: hidden;
 
             > i {
                 font-size: 16px;
@@ -52,6 +46,84 @@
                 color: $nav-sidebar-active-link-color;
                 cursor: default;
             }
+        }
+    }
+}
+
+.user {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: $user-height;
+    line-height: $user-height;
+    background-color: $user-bg;
+    border-top: 1px solid $user-border-color;
+    color: $user-color;
+    font-weight: $user-font-weight;
+}
+
+.user-info {
+    margin: 0 ($user-height + 15) 0 15px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+    img {
+        width: 30px;
+        height: 30px;
+        margin-right: 15px;
+    }
+}
+
+.user-logout {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: $user-height;
+    height: 100%;
+    border-left: 1px solid $user-border-color;
+    text-align: center;
+    font-size: 18px;
+    color: $user-color;
+
+    &:hover,
+    &:focus {
+        background-color: $user-logout-hover-color;
+        color: $user-color;
+    }
+}
+
+@media (min-width: $screen-sm) {
+    .sidebar {
+        position: fixed;
+        top: 0;
+        left: 0;
+        bottom: 0;
+    }
+}
+
+@media (min-width: $screen-sm) and (max-width: $screen-lg) {
+    .sidebar {
+        @include transition(width .15s ease);
+    }
+
+    .sidebar:not(:hover) {
+        width: $nav-sidebar-collapsed-width;
+
+        > .nav > li > a > span {
+            opacity: 0;
+        }
+
+        .sidebar-brand {
+            background: transparent $nav-sidebar-collapsed-logo center no-repeat;
+        }
+
+        .user-info {
+            display: none;
+        }
+
+        .user-logout {
+            width: 100%;
         }
     }
 }
