Removed fontawesome from dist package, it now shall be added apart, refactored demo folders

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -68,8 +68,8 @@ $nav-link-hover-color:                      inherit !default;
 
 //== Sidebar
 $nav-sidebar-collapsed-width:               56px;
-$nav-sidebar-logo:                          url('../demo/assets/logo-demo.png') !default;
-$nav-sidebar-collapsed-logo:                url('../demo/assets/logo-demo-collapsed.png') !default;
+$nav-sidebar-logo:                          url('../../demo/assets/logo-demo.png') !default;
+$nav-sidebar-collapsed-logo:                url('../../demo/assets/logo-demo-collapsed.png') !default;
 $nav-sidebar-bg-color:                      $gray-darker !default;
 $nav-sidebar-border-color:                  #000 !default;
 
