--- a/src/_toggle.scss
+++ b/src/_toggle.scss
@@ -7,7 +7,7 @@ input[type="checkbox"].toggle {
         width: $toggle-width;
         height: $toggle-height;
         line-height: $toggle-height;
-        border-radius: $border-radius-large;
+        border-radius: $border-radius-small;
         background-color: $gray;
         cursor: pointer;
         transition: all .25s ease-in;
@@ -21,7 +21,7 @@ input[type="checkbox"].toggle {
             content: ' ';
             background: #fff;
             transition: all .25s ease-in;
-            border-radius: $border-radius-base;
+            border-radius: $border-radius-small * 0.5;
         }
 
         .off, .on {
