Removed fontawesome from dist package, it now shall be added apart, refactored demo and src folders

--- a/src/styles/_type.scss
+++ b/src/styles/_type.scss
@@ -12,6 +12,12 @@ h6, .h6 { font-weight: $font-weight-h6; }
 
     > h1 {
         margin-bottom: 23px;
+
+        > select {
+            @extend .form-control;
+            @extend .inline;
+            @extend .pull-right;
+        }
     }
 }
 
