--- a/src/styles/_sidebar.scss
+++ b/src/styles/_sidebar.scss
@@ -5,29 +5,48 @@
     padding: 0;
     background: $nav-sidebar-bg-color;
     font-size: $nav-sidebar-font-size;
+    overflow: hidden;
 }
 
 .sidebar-brand {
     display: block;
-    height: $nav-sidebar-brand-height;
-    line-height: $nav-sidebar-brand-height;
-    text-indent: -9999px;
-    background: $nav-sidebar-brand-bg-color $nav-sidebar-logo no-repeat 20px;
 
-    > i {
-        float: right;
+    > a {
+        display: block;
+        height: $nav-sidebar-brand-height;
+        background: $nav-sidebar-brand-bg-color $nav-sidebar-logo no-repeat 20px;
+        padding: 0 15px;
+        cursor: pointer;
+        font-size: 16px;
+        line-height: $nav-sidebar-brand-height;
+        text-align: right;
+        color: $gray;
     }
-}
 
-.sidebar-header {
-    padding: $nav-sidebar-header-padding;
-    color: $nav-sidebar-header-color;
-    border-top: 1px solid $nav-sidebar-header-border-color;
-    font-weight: bold;
-    text-transform: uppercase;
+    > ul {
+        @extend .dropdown-menu;
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        border: 0;
+        border-top: 1px solid $gray-darker;
+        border-bottom: 1px solid $nav-sidebar-brand-bg-color;
+        background: $nav-sidebar-brand-bg-color;
+        box-shadow: none;
 
-    &:first-child {
-        border-top: 0;
+        > li > a {
+            padding: 12px 18px;
+            color: $gray;
+
+            &:hover {
+                background-color: $gray-darker;
+                color: $gray;
+            }
+        }
+    }
+
+    .sidebar-header {
+        border-top: 1px solid $gray-darker;
     }
 }
 
@@ -55,12 +74,24 @@
             &,
             &:hover,
             &:focus {
-                border-left: 3px solid $brand-primary;
+                border-left: 3px solid $product-color;
                 background-color: $nav-sidebar-active-link-bg;
                 color: $nav-sidebar-active-link-color;
                 cursor: default;
             }
         }
+    }
+}
+
+.sidebar-header {
+    padding: $nav-sidebar-header-padding;
+    color: $nav-sidebar-header-color;
+    border-top: 1px solid $nav-sidebar-header-border-color;
+    font-weight: bold;
+    text-transform: uppercase;
+
+    &:first-child {
+        border-top: 0;
     }
 }
 
