--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -19,6 +19,8 @@ $brand-info:            #3598db !default;
 $brand-warning:         #ffce55 !default;
 $brand-danger:          #d8192b !default;
 
+$product-color:         $brand-primary !default;
+
 
 //== Scaffolding
 //
@@ -48,6 +50,12 @@ $font-weight-h4:                500 !default;
 $font-weight-h5:                400 !default;
 $font-weight-h6:                500 !default;
 
+
+//== Ease functions
+//
+//## Define ease functions to be used in animations
+
+$easeOutQuint:                  0.230, 1.000, 0.320, 1.000 !default;
 
 //== Components
 //
