I think the navigation is finished

--- a/src/styles/_dropdowns.scss
+++ b/src/styles/_dropdowns.scss
@@ -1,3 +1,11 @@
 .dropdown-menu > li > a > i:first-child {
     margin-right: 8px;
 }
+
+.dropdown-submenu {
+    position:relative;
+
+    &:hover > .dropdown-menu {
+        display:block;
+    }
+}
