--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -51,12 +51,6 @@ $font-weight-h5:                400 !default;
 $font-weight-h6:                500 !default;
 
 
-//== Ease functions
-//
-//## Define ease functions to be used in animations
-
-$easeOutQuint:                  0.230, 1.000, 0.320, 1.000 !default;
-
 //== Components
 //
 //## Define common padding and border radius sizes and more. Values based on 14px text and 1.428 line-height (~20px to start).
@@ -79,7 +73,7 @@ $nav-link-hover-color:                      inherit !default;
 $nav-sidebar-logo:                          url('../../demo/assets/logo-demo.png') !default;
 $nav-sidebar-bg-color:                      $gray-darker !default;
 $nav-sidebar-border-color:                  #000 !default;
-$nav-sidebar-font-size:                  12px !default;
+$nav-sidebar-font-size:                     12px !default;
 
 $nav-sidebar-brand-height:                  62px !default;
 $nav-sidebar-brand-padding:                 21px 15px !default;
@@ -98,6 +92,7 @@ $nav-sidebar-header-color:                  #666666 !default;
 $nav-sidebar-header-border-color:           $gray-dark !default;
 
 //== Tabs
+$nav-tabs-padding:                          6px 15px 0 !default;
 $nav-tabs-border-color:                     transparent !default;
 
 $nav-tabs-link-hover-border-color:          transparent !default;
