Little improvements on client selector

--- a/src/styles/_client-selector.scss
+++ b/src/styles/_client-selector.scss
@@ -1,6 +1,6 @@
 .client-selector {
     .form-group {
-        margin-bottom: 0;
+        margin-bottom: 10px;
 
         > .form-control {
             padding-right: 32px;
