--- a/src/styles/_sidebar.scss
+++ b/src/styles/_sidebar.scss
@@ -10,10 +10,11 @@
     > .nav {
         > li {
             > a {
-                border-left: 3px solid transparent;
+                border-left: 5px solid transparent;
                 color: $nav-sidebar-link-color;
                 white-space: nowrap;
                 overflow: hidden;
+                padding-left: 13px;
 
                 > i {
                     font-size: 16px;
@@ -31,7 +32,7 @@
                 &,
                 &:hover,
                 &:focus {
-                    border-left: 3px solid $product-color;
+                    border-left: 5px solid $product-color;
                     background-color: $nav-sidebar-active-link-bg;
                     color: $nav-sidebar-active-link-color;
                     cursor: default;
