--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -14,10 +14,25 @@ $gray-light:            #dddddd !default; // #c8c8c8
 $gray-lighter:          #eeeeee !default; // #eeeeee
 
 $brand-primary:         #7a3091 !default;
+$brand-primary-light:   lighten(#7a3091, 55%) !default;
+$brand-primary-dark:    darken(#7a3091, 55%) !default;
+
 $brand-success:         #9aca40 !default;
+$brand-success-light:   lighten(#9aca40, 55%) !default;
+$brand-success-dark:    darken(#9aca40, 55%) !default;
+
 $brand-info:            #3598db !default;
+$brand-info-light:      lighten(#3598db, 55%) !default;
+$brand-info-dark:       darken(#3598db, 55%) !default;
+
 $brand-warning:         #ffce55 !default;
+$brand-warning-light:   lighten(#ffce55, 55%) !default;
+$brand-warning-dark:    darken(#ffce55, 55%) !default;
+
 $brand-danger:          #d8192b !default;
+$brand-danger-light:    lighten(#d8192b, 55%) !default;
+$brand-danger-dark:     darken(#d8192b, 55%) !default;
+
 
 $product-color:         $brand-primary !default;
 
@@ -55,9 +70,9 @@ $font-weight-h6:                500 !default;
 //
 //## Define common padding and border radius sizes and more. Values based on 14px text and 1.428 line-height (~20px to start).
 
-$border-radius-small:           0 !default;
-$border-radius-base:            0 !default;
-$border-radius-large:           0 !default;
+$border-radius-small:           2px !default;
+$border-radius-base:            2px !default;
+$border-radius-large:           4px !default;
 
 
 //== Navs
