Typography, buttons, updated colors, forms

--- a/src/styles/_daterangepicker.scss
+++ b/src/styles/_daterangepicker.scss
@@ -202,6 +202,7 @@
 .daterangepicker button {
     width: 74px;
     margin-right: 11px;
+    padding: $padding-base-vertical 0;
 
     &:last-child {
         margin-right: 0;
