--- a/src/styles/_navs.scss
+++ b/src/styles/_navs.scss
@@ -1,3 +1,7 @@
+.nav > li > a {
+    color: $brand-primary;
+}
+
 .nav-tabs {
     padding: $nav-tabs-padding;
     background-color: $page-header-bg;
