--- a/src/styles/chaordic-bootstrap.scss
+++ b/src/styles/chaordic-bootstrap.scss
@@ -8,9 +8,11 @@
 @import 'bootstrap-sass-official/assets/stylesheets/bootstrap';
 
 // imports
+@import 'buttons';
 @import 'client-selector';
 @import 'daterangepicker';
 @import 'dropdowns';
+@import 'forms';
 @import 'grid';
 @import 'modals';
 @import 'navs';
