--- a/src/styles/_type.scss
+++ b/src/styles/_type.scss
@@ -1,9 +1,12 @@
-h1, .h1 { font-weight: $font-weight-h1; }
-h2, .h2 { font-weight: $font-weight-h2; }
-h3, .h3 { font-weight: $font-weight-h3; }
-h4, .h4 { font-weight: $font-weight-h4; }
-h5, .h5 { font-weight: $font-weight-h5; }
-h6, .h6 { font-weight: $font-weight-h6; }
+h5, .h5 {
+    color: $gray-da;
+    text-transform: uppercase;
+}
+
+h6, .h6 {
+    color: $gray;
+    text-transform: uppercase;
+}
 
 .page-header {
     @extend .clearfix;
