--- a/src/styles/chaordic-bootstrap.scss
+++ b/src/styles/chaordic-bootstrap.scss
@@ -14,6 +14,7 @@
 @import 'dropdowns';
 @import 'forms';
 @import 'grid';
+@import 'input-groups';
 @import 'modals';
 @import 'navs';
 @import 'panels';
