--- a/src/styles/chaordic-bootstrap.scss
+++ b/src/styles/chaordic-bootstrap.scss
@@ -10,6 +10,7 @@
 // imports
 @import 'buttons';
 @import 'client-selector';
+@import 'close';
 @import 'daterangepicker';
 @import 'dropdowns';
 @import 'forms';
