--- a/src/styles/_modals.scss
+++ b/src/styles/_modals.scss
@@ -1,8 +1,15 @@
-.modal-header {
-    background-color: $modal-header-bg;
-    color: $modal-header-color;
+.modal-content {
+    border: none;
 }
 
-.modal-footer {
-    padding-top: 0;
+.modal-header {
+    background-color: $modal-header-bg;
+    border-radius: $border-radius-large $border-radius-large 0 0;
+
+    h4 {
+        text-transform: uppercase;
+        color: $modal-header-color;
+        font-size: 14px;
+        font-weight: 700;
+    }
 }
