--- a/src/styles/chaordic-bootstrap.scss
+++ b/src/styles/chaordic-bootstrap.scss
@@ -8,6 +8,7 @@
 @import 'bootstrap-sass-official/assets/stylesheets/bootstrap';
 
 // imports
+@import 'alerts';
 @import 'buttons';
 @import 'client-selector';
 @import 'close';
@@ -21,6 +22,7 @@
 @import 'panels';
 @import 'sidebar';
 @import 'table-list';
+@import 'tables';
 @import 'tags-input';
 @import 'toggle';
 @import 'tweaks';
