--- a/src/styles/chaordic-bootstrap.scss
+++ b/src/styles/chaordic-bootstrap.scss
@@ -20,6 +20,7 @@
 @import 'modals';
 @import 'navs';
 @import 'panels';
+@import 'popover';
 @import 'sidebar';
 @import 'table-list';
 @import 'tables';
