--- a/src/styles/chaordic-bootstrap.scss
+++ b/src/styles/chaordic-bootstrap.scss
@@ -22,6 +22,7 @@
 @import 'navs';
 @import 'panels';
 @import 'popover';
+@import 'progress-bars';
 @import 'sidebar';
 @import 'table-list';
 @import 'tables';
